# robot_appium

./: .gitignore  pyproject.toml  readme
logs/: log.html  output.xml  report.html
resources/: base.robot  screenHome.robot  screenLogin.robot  screenPonto.robot
tests/: consultaBatidas.robot  login.robot
