[tool.poetry]
name = "appium"
version = "0.1.0"
description = "Testes e2e Colabore"
authors = ["Ton Arruda <georgem.juniore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.0.1"
robotframework-appiumlibrary = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
